# FEBioERD

./: .gitignore  CMakeLists.txt
.github/workflows/: linux-pull-request.yml  linux-push.yml  macos-pull-request.yml  macos-push.yml  windows-pull-request.yml  windows-push.yml
Documentation/: FEBioERD.bib  FEBioERD_Theory_Manual.lyx  InstructionsFEBio.docx  README.md  febio.xml
Example/KinematicGrowth_LaBelle2024/Aneurysm/: aneurysm_case1.feb  aneurysm_case2.feb  aneurysm_case3.feb
Example/KinematicGrowth_LaBelle2024/Cube/: CubeTet10_Mesh.feb  cube_case1.feb  cube_case2.feb  cube_case3.feb  cube_case4.feb
FEBioERD/: FEBioERD.cpp  FEBioERDPlot.cpp  FEBioERDPlot.h  FEChemicalReactionERD.h  FEERDModule.cpp  FEElasticReactionDiffusion.cpp  FEElasticReactionDiffusion.h  FEElasticReactionDiffusionAnalysis.cpp  FEElasticReactionDiffusionAnalysis.h  FEElasticReactionDiffusionInterface.h  FEElasticReactionDiffusionSolidDomain.cpp  FEElasticReactionDiffusionSolver.cpp  FEGrowthTensorERD.cpp  FEHillActivationANDActivation.cpp  FEHillActivationANDInhibition.cpp  FEHillActivationORActivation.cpp  FEKinematicGrowthRateDependent.cpp  FEKinematicGrowthRateDependent.h  FEPrescribedStressSensitiveConcentrationERD.cpp  febioerd_api.h  stdafx.cpp
ci/Windows/: publish-to-s3.sh
ci/macOS/: publish-to-s3.sh
docs/WorkInProgress/: #FEBio_Theory_Manual.lyx#  FEBio3.bib  FEBioERD_Theory_Manual.lyx  FEBio_Theory_Manual.lyx
